--- a/foods.html
+++ b/foods.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="logo">
                 <a href="#" title="Logo">
-                    <img src="images/logo.png" class="img-responsive">
+                    <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
 
@@ -53,74 +53,25 @@
 
         </div>
     </section>
-    <!-- fOOD SEARCH Section Ends Here -->
+    <!-- fOOD sEARCH Section Ends Here -->
 
-    <!-- Categories Section Starts Here -->
-    <section class="categories">
-        <div class="container">
-            <h2 class="text-center">Explore Foods</h2>
 
-            <a href="category-foods.html">
-            <div class="box-3 float-container">
-                <img src="images/flavorful-pakistani-street-food-samosa-chaat-delight-image-showcases-plate-authentic-pakistani-street-food-samosa-chaat-330438837.webp" alt="Dahi Samosa" class="img-responsive img-curve">
 
-                <h3 class="float-text text-white">Dahi Samosa</h3>
-            </div>
-            </a>
-
-            <a href="#">
-            <div class="box-3 float-container">
-                <img src="images/Pav Bhaji.jpg" alt="Pav Bhaji" class="img-responsive img-curve">
-
-                <h3 class="float-text text-white">Pav Bhaji</h3>
-            </div>
-            </a>
-
-            <a href="#">
-            <div class="box-3 float-container">
-                <img src="images/Vada Pav.jpg" alt="Vada Pav" class="img-responsive img-curve">
-
-                <h3 class="float-text text-white">Vada Pav</h3>
-            </div>
-            </a>
-
-            <div class="clearfix"></div>
-        </div>
-    </section>
-    <!-- Categories Section Ends Here -->
-
-    <!-- Food Menu Section Starts Here -->
+    <!-- fOOD MEnu Section Starts Here -->
     <section class="food-menu">
         <div class="container">
             <h2 class="text-center">Food Menu</h2>
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/Chole Bhature.jpg" alt="Chole Bhature" class="img-responsive img-curve">
+                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Chole Bhature</h4>
-                    <p class="food-price">₹ 90</p>
+                    <h4>Food Title</h4>
+                    <p class="food-price">$2.3</p>
                     <p class="food-detail">
-                        Made with spicy chickpea curry (chole) paired with deep-fried fermented flour bread (bhature).
-                    </p>
-                    <br>
-
-                    <a href="order.html" class="btn btn-primary">Order Now</a>
-                </div>
-            </div>
-
-            <div class="food-menu-box">
-                <div class="food-menu-img">
-                    <img src="images/Cheese Sandwitch.jpg" alt="Cheese Sandwich" class="img-responsive img-curve">
-                </div>
-
-                <div class="food-menu-desc">
-                    <h4>Cheese Sandwich</h4>
-                    <p class="food-price">₹ 60</p>
-                    <p class="food-detail">
-                        Made with bread slices filled with cheese, often grilled or toasted until the cheese melts.
+                        Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
@@ -130,14 +81,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/Puri bhaji.avif" alt="Puri Bhaji" class="img-responsive img-curve">
+                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Puri Bhaji</h4>
-                    <p class="food-price">₹ 70</p>
+                    <h4>Smoky Burger</h4>
+                    <p class="food-price">$2.3</p>
                     <p class="food-detail">
-                        Made with deep-fried wheat flour bread (puri) served with spiced potato curry (bhaji).
+                        Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
@@ -147,14 +98,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/Samosa.avif" alt="Samosa" class="img-responsive img-curve">
+                    <img src="images/menu-burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Samosa</h4>
-                    <p class="food-price">₹ 20</p>
+                    <h4>Nice Burger</h4>
+                    <p class="food-price">$2.3</p>
                     <p class="food-detail">
-                        Made with with a crispy flour pastry filled with a spiced mixture of potatoes, peas.
+                        Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
@@ -164,14 +115,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/Dal Rice.webp" alt="Dal Rice" class="img-responsive img-curve">
+                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Dal Rice</h4>
-                    <p class="food-price">₹ 60</p>
+                    <h4>Food Title</h4>
+                    <p class="food-price">$2.3</p>
                     <p class="food-detail">
-                        Made with cooked lentils (dal) seasoned with spices, served over steamed rice.
+                        Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
@@ -181,14 +132,31 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="images/Veg Sandwich.jpeg" alt="Veg Sandwich" class="img-responsive img-curve">
+                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Veg Sandwich</h4>
-                    <p class="food-price">₹ 55</p>
+                    <h4>Food Title</h4>
+                    <p class="food-price">$2.3</p>
                     <p class="food-detail">
-                        Made with bread slices filled with fresh or grilled vegetables.
+                        Made with Italian Sauce, Chicken, and organice vegetables.
+                    </p>
+                    <br>
+
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                </div>
+            </div>
+
+            <div class="food-menu-box">
+                <div class="food-menu-img">
+                    <img src="images/menu-momo.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                </div>
+
+                <div class="food-menu-desc">
+                    <h4>Chicken Steam Momo</h4>
+                    <p class="food-price">$2.3</p>
+                    <p class="food-detail">
+                        Made with Italian Sauce, Chicken, and organice vegetables.
                     </p>
                     <br>
 
@@ -203,11 +171,8 @@
 
         </div>
 
-        <p class="text-center">
-            <a href="#">See All Foods</a>
-        </p>
     </section>
-    <!-- Food Menu Section Ends Here -->
+    <!-- fOOD Menu Section Ends Here -->
 
     <!-- social Section Starts Here -->
     <section class="social">
@@ -230,7 +195,7 @@
     <!-- footer Section Starts Here -->
     <section class="footer">
         <div class="container text-center">
-            <p>All rights reserved. Designed By <a href="#" style="color: rgb(20, 105, 21);">Karan Krishna</a></p>
+            <p>All rights reserved. Designed By <a href="#">Vijay Thapa</a></p>
         </div>
     </section>
     <!-- footer Section Ends Here -->
